# mrlyprod

./: .gitignore  AGENTS.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TREE.md  bunfig.toml  pyproject.toml
.claude/: launch.json
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: cli.rs
apps/web/: index.html  index.ts  mrly.css  package.json  shot.ts  tsconfig.json  verify.ts
apps/web/fixtures/: bang.json  billiards.json  calculator.json  calendar.json  captcha.json  chess.json  clock.json  colors.json  crush.json  dice.json  emoji.json  escape.json  extras.json  files.json  font.json  hash.json  julia.json  lasers.json  life.json  log.json  mandelbrot.json  matrix.json  memory.json  menu.json  mines.json  moire.json  notes.json  photos.json  piano.json  pixel.json  quiz.json  settings.json  shot.json  six.json  sleep.json  snake.json  solids.json  tennis.json  text.json  three.json  (+7 more)
apps/web/public/: 404.html  manifest.json  robots.txt
apps/web/src/: builders.ts  glyphs.ts  gpu.ts  icons.ts  journal.ts  jsx.ts  kernel.ts  main.ts  palette.ts  peeks.ts  router.ts  sound.ts  types.ts  webgpu.d.ts
apps/web/src/components/: Board.tsx  ColorPicker.tsx  DPad.tsx  GameOver.tsx  GlyphPicker.tsx  Meter.tsx  Pager.tsx  Section.tsx  Shot.tsx  TilePicker.tsx  TimePicker.tsx  colorpicker.tsx  fractal.tsx  library.tsx  options.ts  palette.tsx
apps/web/src/render/: boards.ts  fx.ts  mark.ts  nodes.ts  paint.ts  reconcile.ts  theme.ts  wallpaper.ts
apps/web/styles/: boxes.css  doc.css  fonts.css  forms.css  motion.css  shell.css  tokens.css
cdn/pages/: about.md  privacy.md  terms.md
docs/: COMMENTS.md  FACE.md  LAYERS.md  LIBRARY.md  PICKERS.md  STATE.md
files/mrlyfont/: MrlyFont.json
lab/: demo.py
ops/: acm.py  budget.py  cdn.py  cloudfront.py  deploy.py  dns.py  s3.py
pkgs/mrlyjs/: Cargo.toml
pkgs/mrlyjs/src/: lib.rs
pkgs/mrlypy/: Cargo.toml  pyproject.toml
pkgs/mrlypy/src/: graphics.rs  lib.rs
pkgs/mrlypy/tests/: smoke.py  test_capture.py  test_kernel.py
pkgs/mrlyrs/: Cargo.toml  build.rs
pkgs/mrlyrs/examples/: fixtures.rs  og.rs  pages.rs  routes.rs
pkgs/mrlyrs/mrlyapps/: Cargo.toml
pkgs/mrlyrs/mrlycore/: Cargo.toml
pkgs/mrlyrs/mrlyfont/: Cargo.toml
pkgs/mrlyrs/mrlymath/: Cargo.toml
pkgs/mrlyrs/mrlymusic/: Cargo.toml
pkgs/mrlyrs/mrlynet/: Cargo.toml
pkgs/mrlyrs/mrlyos/: Cargo.toml  build.rs
pkgs/mrlyrs/mrlyui/: Cargo.toml
pkgs/mrlyrs/src/: lib.rs
pkgs/mrlyrs/tests/: golden.rs
utils/: assets.py  config.py  font.py  git.py  ignore.py  layers.py  parity.py  ship.py  spaghetti.py  tree.py
(+467 files in other folders)
