[workspace]
resolver = "2"
members = [
    "pkgs/mrlyrs/mrlycore",
    "pkgs/mrlyrs/mrlymath",
    "pkgs/mrlyrs/mrlyui",
    "pkgs/mrlyrs/mrlyos",
    "pkgs/mrlyrs/mrlyapps",
    "pkgs/mrlyrs/mrlynet",
    "pkgs/mrlypy",
    "pkgs/mrlyjs",
    "apps/cli",
]
default-members = [
    "pkgs/mrlyrs/mrlycore",
    "pkgs/mrlyrs/mrlymath",
    "pkgs/mrlyrs/mrlyui",
    "pkgs/mrlyrs/mrlyos",
    "pkgs/mrlyrs/mrlyapps",
    "pkgs/mrlyrs/mrlynet",
]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
mrlycore = { path = "pkgs/mrlyrs/mrlycore" }
mrlymath = { path = "pkgs/mrlyrs/mrlymath" }
mrlyui = { path = "pkgs/mrlyrs/mrlyui" }
mrlyos = { path = "pkgs/mrlyrs/mrlyos" }
mrlyapps = { path = "pkgs/mrlyrs/mrlyapps" }
mrlynet = { path = "pkgs/mrlyrs/mrlynet" }
png = "0.17"
rand = "0.8"
rand_chacha = "0.3"
serde = "1"
serde_json = { version = "1", features = ["preserve_order", "float_roundtrip"] }
thiserror = "1"
