[project]
name = "mrlyprod"
version = "0.1.0"
requires-python = ">=3.13.12"
dependencies = [
    "boto3>=1.43.46",
    "botocore[crt]>=1.43.46",
    "numpy>=2.5.0",
    "pillow>=12.2.0",
]

[dependency-groups]
bot = [
   "claude-agent-sdk>=0.2.106", 
]
dev = [
    "maturin>=1.14.1",
    "pytest>=9.1.1",
]
font = [
    "brotli>=1.2.0",
    "fonttools>=4.63.0",
    "skia-pathops>=0.9.2",
]
